@@ -1,5 +1,5 @@
 /*
- * "$Id: ps-pdf.cxx,v 1.89.2.213 2003/01/06 22:09:34 mike Exp $"
+ * "$Id: ps-pdf.cxx,v 1.89.2.214 2003/02/20 21:09:11 mike Exp $"
  *
  *   PostScript + PDF output routines for HTMLDOC, a HTML document processing
  *   program.
@@ -5900,16 +5900,21 @@ parse_table(tree_t *t,		/* I - Tree to parse */
 
   if (width > actual_width)
   {
-    for (col = 0, colspan = 0; col < num_cols; col ++)
-      if (!col_fixed[col])
-        colspan ++;
+    if ((var = htmlGetVariable(t, (uchar *)"WIDTH")) != NULL)
+      colspan = num_cols;
+    else
+    {
+      for (col = 0, colspan = 0; col < num_cols; col ++)
+	if (!col_fixed[col])
+          colspan ++;
+    }
 
     if (colspan > 0)
     {
       regular_width = (width - actual_width) / num_cols;
 
       for (col = 0; col < num_cols; col ++)
-        if (!col_fixed[col])
+        if (!col_fixed[col] || var != NULL)
 	{
 	  col_widths[col] += regular_width;
 	  DEBUG_printf(("    col_widths[%d] = %.1f\n", col, col_widths[col]));
@@ -12066,5 +12071,5 @@ flate_write(FILE  *out,		/* I - Output file */
 
 
 /*
- * End of "$Id: ps-pdf.cxx,v 1.89.2.213 2003/01/06 22:09:34 mike Exp $".
+ * End of "$Id: ps-pdf.cxx,v 1.89.2.214 2003/02/20 21:09:11 mike Exp $".
  */
